@@ -46,17 +46,17 @@ def require_option(options, option_name, details=None):
         raise cmdln.CmdlnUserError(msg)
     
 
-# http://code.activestate.com/recipes/466341-guaranteed-conversion-to-unicode-or-byte-string/
-def safe_unicode(obj, *args):
-    """ return the unicode representation of obj """
-    u = str if six.PY3 else unicode
-        
-    try:
-        return u(obj, *args)
-    except UnicodeDecodeError:
-        # obj is byte string
-        ascii_text = str(obj).encode('string_escape')
-        return u(ascii_text)
+def safe_unicode(obj):
+    """Return the unicode/text representation of `obj` without throwing UnicodeDecodeError
+
+    Returned value is only a *representation*, not necessarily identical.
+    """
+    if type(obj) not in (six.text_type, six.binary_type):
+        obj = six.text_type(obj)
+    if type(obj) is six.text_type:
+        return obj
+    else:
+        return obj.decode(errors='ignore')
 
     
 def _hack_unix2win_path_conversion(cmdln_options, option_names):
